fix footer on mobile

--- a/priv/site/assets/global.css
+++ b/priv/site/assets/global.css
@@ -26,9 +26,14 @@ html {
 }
 
 .main {
-  max-width: 1000px;
   padding: 1rem;
   margin: 0 auto;
+  max-width: 1000px;
+}
+
+#footer-content {
+  margin: 0 auto;
+  max-width: 1000px;
 }
 
 #article > ul {
